--- a/assets/style.css
+++ b/assets/style.css
@@ -1,73 +1,83 @@
-body {
-    background-image: linear-gradient(to right, #ff5722, #ff9800);
-    margin-top: 150px !important;
+* {
+    padding: 0;
+    margin: 0;
+
 }
 
-.registrer-left {
-    text-align: center;
-    color: #fff;
+
+
+.navbar-toggler {
+
+    outline: none !important;
+    padding: 0 !important;
+}
+
+.navbar-toggler img {
+    width: 35px;
+}
+
+.navbar-brand img {
+    width: 110px;
+
+}
+
+.nav-link {
+    color: #ff9800 !important;
+    font-weight: 600;
+    font-size: 20px;
+    margin-left: 30px;
+}
+
+.wrapper {
+    margin: 50px auto;
+    border-radius: 10px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    box-shadow: 0 0 40px 2px rgba(243, 134, 9, 0.18);
+}
+
+.feature-box {
     padding: 30px;
 }
 
-.registrer-left p {
-    padding: 20px 20px 0;
+.feature-box h1 {
+    margin-top: 20px;
+    color: #ff9800;
 }
 
-.registrer-left .btn-primary {
-    border-radius: 1.5em;
-    border: none;
-    width: 120px;
-    background: #f8f8f8;
-    font-weight: 600;
-    color: #555;
-    margin-top: 10px;
-}
-
-.registrer-left .btn-primary:hover {
-    background: #000;
-}
-
-.registrer-rigth {
-    border: none;
-    background: #f8f8f8;
-    border-top-left-radius: 10% 50%;
-    border-bottom-left-radius: 10% 50%;
-    padding: 50px;
-}
-
-.registrer-rigth h2 {
-    text-align: center;
-    margin-bottom: 10px;
+.feature-box p {
+    margin: 50px auto;
     color: #555;
 }
 
-.registrer-rigth .btn-primary {
-    float: right;
-    border-radius: 1.5em;
-    border: none;
-    width: 120px;
+.feature-box a {
+    text-decoration: none !important;
+    background: #fff;
+    border-radius: 20px;
+    padding: 10px 20px;
+    margin-right: 30px;
+    border: 2px solid #ff9800 !important;
+    color: #ff9800;
+}
+
+
+.btn-One:hover {
+    color: #fff;
     background: #ff9800;
-    font-weight: 600;
-    color: #fff;
-    margin-top: 10px;
-
 }
 
-.registrer-rigth .btn-primary:hover {
-    background: #ff5722;
+.col-md-6 img {
+    animation: mover 6s infinite alternate;
 }
 
-.registrer-left img {
-    margin-top: 60px;
-    margin-bottom: 18px;
-    width: 80px;
-    animation: mover 1s infinite alternate;
-}
+.wave-image {
+    width: 100%;
+    position: absolute;
+    display: block;
+    top: 69%;
+    z-index: -1;
+    opacity: 0.8;
 
-.registrer-left p a {
-
-    color: #fff;
-    cursor: pointer;
 }
 
 @keyframes mover {
@@ -77,5 +87,11 @@ body {
 
     100% {
         transform: translateY(-20px);
+    }
+}
+
+@media only sreen and (max-width:990px) {
+    .wave-image {
+        display: none;
     }
 }
